--- a/docker/php/conf/development.ini
+++ b/docker/php/conf/development.ini
@@ -43,6 +43,6 @@ xdebug.var_display_max_depth    = -1
 
 xdebug.max_nesting_level        = 1000
 xdebug.cli_color                = 1
-xdebug.client_host              = 10.254.254.254
+xdebug.client_host              = host.docker.internal
 
 default_socket_timeout = 900
